--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,12 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.10.RELEASE'
     id 'java'
     id 'groovy'
+    id 'com.coditory.integration-test' version '1.1.11'
 }
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = '14'
 
 configurations {
     compileOnly {
@@ -33,13 +34,17 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
-    testImplementation 'org.codehaus.groovy:groovy-all:2.5.12'
-    testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
-    testImplementation 'com.github.tomakehurst:wiremock:2.27.2'
-
+    testImplementation 'org.spockframework:spock-junit4:2.0-M4-groovy-3.0'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
+
+    integrationImplementation 'org.spockframework:spock-spring:2.0-M4-groovy-3.0'
+    integrationImplementation 'com.github.tomakehurst:wiremock:2.27.2'
+    integrationImplementation 'io.rest-assured:rest-assured:4.3.2'
+    integrationImplementation 'io.rest-assured:rest-assured-common:4.3.2'
+    integrationImplementation 'io.rest-assured:json-path:4.3.2'
+    integrationImplementation 'io.rest-assured:xml-path:4.3.2'
 }
 
 test {
